--- a/darknet_ros/config/ros.yaml
+++ b/darknet_ros/config/ros.yaml
@@ -2,7 +2,7 @@ subscribers:
 
   camera_reading:
     # topic: /camera/rgb/image_raw
-    topic: /usb_cam/image_raw
+    topic: /camera/color/image_raw
     queue_size: 1
 
 actions:
