--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  # roscore:
-  #   image: osrf/ros:noetic-desktop-full
-  #   network_mode: host
-  #   command: stdbuf -o L roscore
+  roscore:
+    image: osrf/ros:noetic-desktop-full
+    network_mode: host
+    command: stdbuf -o L roscore
 
   darknet:
     build:
@@ -18,6 +18,7 @@ services:
       - "/tmp/.X11-unix:/tmp/.X11-unix:rw"
       - darknet_ros:/darknet_ros
     network_mode: host
+    # runtime: nvidia
     deploy:
       resources:
         reservations:
@@ -25,8 +26,8 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
-    command: roslaunch darknet_ros yolo_v3.launch
-  #   # command: tail -F anything
+    command: roslaunch darknet_ros usb_cam_yolo.launch --wait
+    # command: tail -F anything
 
   usb_cam:
     build:
@@ -38,7 +39,7 @@ services:
     devices:
       - /dev/video0:/dev/video0
     network_mode: host
-    command: roslaunch usb_cam usb_cam-test.launch
+    command: roslaunch usb_cam usb_cam-test.launch --wait
     # command: tail -F anything
 
 volumes:
